2005-06-08  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/parser.rb: support multiple line plugins.
	* style/default/html_formatter.rb (call_plugin_method): use
	apply_plugin method in pluginutil.rb.
	* hiki/util.rb (csv_split): remove a needless method.

2005-06-07  Kazuhiko  <kazuhiko@fdiary.net>
	* messages/en.rb, messages/fr.rb, messages/it.rb,
	messages/ja.rb (msg_password_title): remove a needless message.
	(msg_login): add a new message.

	* misc/plugin/auth_typekey.rb: save 'auth_name' in a session file
	instead of browser's cookie.

	* hiki/command.rb (Command::cmd_view): redirect to FrontPage if a
	page name is invalid.
	(Command::template, Command::themes): remove needless methods.

2005-06-06  Kazuhiko  <kazuhiko@fdiary.net>
	* hiki/page.rb (Page::process): rename from 'Page#page'.
	(Page::out): add a new method.

	* hiki/command.rb (Command::initialize): not put @plugin to @db.
	(dispatch): redirect to FrontPage if a command is invalid.
	(Command::themes): remove a needless method.

	* hiki/storage.rb (HikiDBBase::save): move to 'Plugin#save'.
	* misc/plugin/bbs.rb, misc/plugin/comment.rb,
	misc/plugin/trackback.rb: use 'Plugin#save' instead of 'DB#save'.

	* hiki/plugin.rb (Plugin::load_file): rename from 'Plugin#load'.
	* hiki/config.rb (Config::load): fix a typo (main_on_update ->
	mail_on_update).
	(Config::read_template): add a new method.

2005-06-06  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/plugin/{rss-show.rb,trackback.rb}: remove needless `require's.

2005-06-06  Kouhei Yanagita <sugi@dream.big.or.jp>
	* misc/plugin/rss-show.rb (rss_parse): use Hiki::Util::utf8_to_euc.
	* misc/plugin/trackback.rb (trackback_post): use Hiki::Util::utf8_to_euc.

2005-06-03  Masanori KADO  <QVE02451@nifty.com>
	* misc/plugin/rss-show.rb (rss_show): add an argument to set the number of items.

2005-05-30  Kazuhiko  <kazuhiko@fdiary.net>
	* style/default/parser.rb (Parser_default::inline_impl): treat as
	'reference' if interwiki's name is empty.
